# openbrowser-ai

./: .gitignore  CHANGELOG.md  CNAME  README.md  browser_use_process.md  docker-compose.dev.yml  docker-compose.yml  graph.md  graph_detailed.md  graph_state_flow.md  install.ps1  main.py  pyproject.toml  server.json
.claude-plugin/: marketplace.json
.claude/rules/: git-remote.md  todo-location.md
.codex/: INSTALL.md
.opencode/: INSTALL.md
backend/: Dockerfile  README.md  env.example  pyproject.toml
benchmarks/: a11y_perf_benchmark.py  a11y_perf_results.json  cdp_benchmark.py  cdp_results.json  e2e_llm_benchmark.py  e2e_llm_results.json  e2e_llm_results_1tools.json  e2e_llm_results_cdp.json  e2e_llm_results_cdp_tokens.json  e2e_llm_results_playwright.json  e2e_llm_results_playwright_tokens.json  e2e_llm_results_tokens.json  e2e_llm_stats.py  e2e_llm_stats_results.json  e2e_published_test.py  openbrowser_benchmark.py  openbrowser_results.json  playwright_benchmark.py  playwright_results.json  plot_benchmark.py  stats_cdp.json  stats_openbrowser.json  stats_playwright.json  test_e2e_benchmark_verify.py
docs/: README.md  comparison.md  comparison.mdx  docs.json  install.sh  introduction.mdx  quickstart.mdx  quickstart_llm.mdx  supported-models.mdx  todo.md
examples/: simple.py
extension/: background.js  content.js
frontend/: UI_CONFIG.md  env.local.example  next.config.ts  package-lock.json  package.json
infra/: Makefile
landing/: CNAME  package-lock.json  package.json
local_docs/: CHANGELOG.md
plugin/: .mcp.json  README.md  skills.sh.json
scripts/: deploy-backend.sh  deploy-frontend.sh
stress-tests/: README.md  forms-comparison.html  index.html  llms-full.txt
terraform/: README.md  alb.tf  backend.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_actor_element.py  test_actor_page.py  test_advanced_features.py  test_agent_message_manager_coverage.py  test_agent_prompts_coverage.py  test_agent_service_deep_coverage.py  test_agent_views.py  test_agent_views_coverage.py  test_browser_profile.py  test_browser_profile_wait_time.py  test_cli_c_help.py  test_cli_deep_coverage.py  test_clickable_elements.py  test_code_use_formatting.py  test_code_use_init_coverage.py  test_code_use_namespace.py  test_code_use_namespace_coverage.py  test_code_use_serializer.py  test_code_use_service_coverage.py  test_comprehensive_browser.py  test_config.py  test_config_coverage.py  test_conversation.py  test_crash_watchdog_coverage.py  test_daemon_client_coverage.py  test_daemon_integration.py  test_daemon_server.py  test_daemon_server_coverage.py  test_dom_mcp_tools_utils_gaps.py  test_dom_service.py  test_eval_serializer.py  test_executor.py  test_filesystem.py  test_filesystem_coverage.py  test_init_cmd_coverage.py  test_llm_providers.py  test_local_browser_watchdog.py  test_mcp_integration.py  test_mcp_server.py  (+12 more)
(+416 files in other folders)
