[project]
name = "openbrowser"
version = "0.1.0"
description = "Agentic browser automation using LangGraph and raw CDP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph",
    "langchain-core",
    "langchain-openai", 
    "pydantic",
    "playwright",
    "python-dotenv",
    "httpx>=0.28.1",
    "websockets>=15.0.1",
    "aiofiles",
    "cdp-use"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openbrowser"]