[project]
name = "openbrowser"
version = "0.1.0"
description = "Agentic browser automation using LangGraph and raw CDP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0", 
    "pydantic>=2.0.0",
    "playwright",
    "python-dotenv",
    "httpx>=0.28.1",
    "websockets>=15.0.1",
    "aiofiles",
    "cdp-use",
    "google-genai>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openbrowser"]